# shiorin

./: .gitignore  README.md  abst_table.py  common.css  config.py  generator.py  header.css  page_generator.py  paper_template.html  participant.py  pyproject.toml  requirements.txt  room.py  sample.csv  sample_template.html  shiori.css  shiori_generator.py  table.css  table.py  tasks.py  template.html  text.css  time_table.py  timetable.py  web_template.html
paper/css/: common.css  header.css  table.css  text.css
templates/paper/: cover.html  info.html  room.html  ryokan.html  template.html  timetable.html
templates/web/: template.html
web/css/: common.css  header.css  table.css
